--- a/css/colors.sass
+++ b/css/colors.sass
@@ -3,9 +3,13 @@ $white : #fff
 
 $blue : rgb(31,48,129)
 
-$oragne : rgb(245,163,34)
+$orange : rgb(245,163,34)
 
 $yellow : rgb(255,215,0)
 
 $brown : #836224
 $lightBrown : #f9c87a
+
+$pink : #fd2550
+
+$vine : rgb(116, 23, 38)
