--- a/css/style.sass
+++ b/css/style.sass
@@ -1,5 +1,5 @@
 @import "colors"
-
+@import "animation"
 @import "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=cyrillic"
 
 body
@@ -34,140 +34,193 @@ a:hover, a:active
   text-indent: 100%
   white-space: nowrap
   overflow: hidden
-  margin: 0 0 30px
+  margin: 0 0 25px
+
 .sub-title
-  width: 280px
+  max-width: 250px
   font-size: 30px
   color: $white
   font-weight: bold
   text-transform: uppercase
   text-align: center
-  text-shadow: 0px 0px 6px rgba($blue, 0), 0px 1px 6px rgba($blue, 0.2), 0px 2px 6px rgba($blue, 0.3), 0px 3px 6px rgba($blue, 0.5), 0px 4px 6px rgba($blue, 0.7), 0px 5px 6px rgba($blue, 0.8), 0px 6px 6px rgba($blue, 0.9), 0 0 6px rgba($blue, 1)
   overflow: hidden
+  padding: 20px 10px
+  border: none
+  text-align: center
+  -o-text-overflow: clip
+  text-overflow: clip
+  white-space: pre
+  text-shadow: 0 0 5px rgba($white,0.3) , 0 0 8px rgba($blue,0.6) , 0 0 10px rgba($white,0.8) , 0 0 20px $blue , 0 0 30px $blue , 0 0 50px $blue , 0 0 60px $blue
 
 .slider
   height: 100px
 
+
 .play
-  height: 120px
+  // height: 120px
   .button
     display: block
     padding: 10px
     position: relative
     height: 35px
-    width: 210px
+    width: 250px
     margin: 0 auto
     text-decoration: none
     font-weight: bold
-    font-size: 28px
+    font-size: 33px
     text-transform: uppercase
     text-align: center
     border-radius: 5px
     transform: matrix3d(0.757401, -0.000077, 0, 0.000077, -0.184557, 0.782938, 0, -0.002271, 0, 0, 1, 0, 19.244145, -1, 0, 1)
-    transform-origin: 30px 15px 0
+    transform-origin: 43px 15px 0
     line-height: 38px
     white-space: nowrap
+    animation: fly 3.5s infinite
+    animation-timing-function: linear
+    &:hover
+      animation: none
     &::before,
     &::after
       content: ''
       position: absolute
-      border-radius: 3px
-    &::after
+    &::before
       left: 0px
-      width: 228px
+      width: 267px
       bottom: -1px
+      border-radius: 3px
     // &::before
     //   height: 23px
     //   border-top: 0
     //   border-radius: 0 0 3px 3px
+    &::after
+      background-image: url(../img/btn-shadow.png)
+      background-size: cover
+      width: 270px
+      height: 50px
+      // transinion: ease 3s transform
+      animation: text 3.5s infinite
+      animation-timing-function: linear
+      bottom: -60px
+      left: 0
 
   .play-btn
     color: #303234
     border-bottom: 8px solid $brown
     text-shadow: 0px 1px 0px $lightBrown
-    background: $oragne
-    background-image: -moz-linear-gradient( 90deg, $oragne 0%, $yellow 100%)
-    background-image: -webkit-linear-gradient( 90deg, $oragne 0%, $yellow 100%)
-    background-image: -ms-linear-gradient( 90deg, $oragne 0%, $yellow 100%)
+    background: $orange
+    background-image: -moz-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+    background-image: -webkit-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+    background-image: -ms-linear-gradient( 90deg, $orange 0%, $yellow 100%)
     box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4)
-
-
     &:hover
       background: $yellow
       background-image: -moz-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
       background-image: -webkit-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
-    &::before,
-    &::after
+    &::before
       border: 1px solid $lightBrown
       border-bottom: 1px solid $brown
-
-
-
-
-
-@keyframes logo-pulse
-  0%
-    background-position: 0 0px
-  100%
-    background-position: 0 -82px
-
 .avt
   width: 35%
   // height: 435px
   background-size: cover
   position: relative
 .column
-  height: 435px
+  height: 370px
   margin-top: 50px
-  background-size: contain
+  background-size: cover
   background-repeat: no-repeat
   &-left
     background-image: url(../img/avtomaty-left.png)
     background-position: right
+    padding-top: 35px
+    box-sizing: content-box
     &::before
       content: ''
       position: absolute
       background-image: url(../img/big_rob.gif)
       width: 132px
       height: 80px
-      top: 163px
-      right: 158px
+      top: 149px
+      right: 157px
       background-size: cover
     &::after
       content: ''
       position: absolute
       background-image: url(../img/pearl_lag.gif)
-      width: 118px
-      height: 75px
-      top: 163px
-      right: 42px
+      width: 120px
+      height: 70px
+      top: 147px
+      right: 37px
       background-size: cover
   &-right
     background-image: url(../img/avtomaty-right.png)
     background-position: left
+    padding-top: 35px
+    box-sizing: content-box
     &::before
-      content: ""
+      content: ''
       position: absolute
       background-image: url(../img/hot_targ.gif)
-      width: 143px
+      width: 133px
       height: 80px
-      top: 168px
+      top: 156px
+      left: 22px
       background-size: cover
-      left: 23px
     &::after
-      content: ""
+      content: ''
       position: absolute
       background-image: url(../img/aztecs.gif)
-      width: 128px
-      height: 78px
-      top: 175px
+      width: 136px
+      height: 80px
+      top: 156px
+      left: 148px
       background-size: cover
-      left: 156px
   &-center
     // max-width: 30%
-    display: flex
-    flex-direction: column
-    justify-content: space-around
-    align-items: center
+    // display: flex
+    // flex-direction: column
+    // justify-content: space-around
+    // align-items: center
     padding-bottom: 50px
     box-sizing: border-box
+
+#content-slider
+  width: 100%
+  height: 100px
+  margin: 10px auto 35px
+  .slider
+    background: transparent
+    height: 100px
+    width: 100%
+    overflow: visible
+    position: relative
+    h3
+      color: $pink
+      font-weight: bold
+      font-size: 24px
+      text-shadow: 1.414px 1.414px 0px rgba($vine, 0.75)
+      margin: 12px 0
+    .mask
+      overflow: hidden
+      height: 100px
+      position: relative
+      section
+        width: 100%
+        height: 100px
+        text-align: center
+        text-transform: uppercase
+        position: absolute
+        p
+        font-size: 18px
+        color: $white
+        line-height: 25px
+        &.firstanimation
+          animation: cycle 20s linear infinite
+        &.secondanimation
+          animation: cycletwo 20s linear infinite
+        &.thirdanimation
+          animation: cyclethree 20s linear infinite
+        &.fourthanimation
+          animation: cyclefour 20s linear infinite
+        &.fifthanimation
+          animation: cyclefive 20s linear infinite
