--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,296 @@
 @import "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=cyrillic";
+@-webkit-keyframes fly {
+  50% {
+    margin-top: -7px; } }
+@keyframes fly {
+  50% {
+    margin-top: -7px; } }
+@-webkit-keyframes text {
+  50% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8); } }
+@keyframes text {
+  50% {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8); } }
+@-webkit-keyframes logo-pulse {
+  0% {
+    background-position: 0 0px; }
+  100% {
+    background-position: 0 -82px; } }
+@keyframes logo-pulse {
+  0% {
+    background-position: 0 0px; }
+  100% {
+    background-position: 0 -82px; } }
+@-webkit-keyframes cycle {
+  0% {
+    right: 0px; }
+  4% {
+    right: 0px; }
+  16% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  20% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  21% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  92% {
+    right: -325px;
+    opacity: 0;
+    z-index: 0; }
+  96% {
+    right: -325px;
+    opacity: 0; }
+  100% {
+    right: 0px;
+    opacity: 1; } }
+@keyframes cycle {
+  0% {
+    right: 0px; }
+  4% {
+    right: 0px; }
+  16% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  20% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  21% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  92% {
+    right: -325px;
+    opacity: 0;
+    z-index: 0; }
+  96% {
+    right: -325px;
+    opacity: 0; }
+  100% {
+    right: 0px;
+    opacity: 1; } }
+@-webkit-keyframes cycletwo {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  16% {
+    right: -325px;
+    opacity: 0; }
+  20% {
+    right: 0px;
+    opacity: 1; }
+  24% {
+    right: 0px;
+    opacity: 1; }
+  36% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  40% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  41% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  100% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; } }
+@keyframes cycletwo {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  16% {
+    right: -325px;
+    opacity: 0; }
+  20% {
+    right: 0px;
+    opacity: 1; }
+  24% {
+    right: 0px;
+    opacity: 1; }
+  36% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  40% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  41% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  100% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; } }
+@-webkit-keyframes cyclethree {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  36% {
+    right: -325px;
+    opacity: 0; }
+  40% {
+    right: 0px;
+    opacity: 1; }
+  44% {
+    right: 0px;
+    opacity: 1; }
+  56% {
+    right: 0px;
+    opacity: 1; }
+  60% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  61% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  100% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; } }
+@keyframes cyclethree {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  36% {
+    right: -325px;
+    opacity: 0; }
+  40% {
+    right: 0px;
+    opacity: 1; }
+  44% {
+    right: 0px;
+    opacity: 1; }
+  56% {
+    right: 0px;
+    opacity: 1; }
+  60% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  61% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  100% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; } }
+@-webkit-keyframes cyclefour {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  56% {
+    right: -325px;
+    opacity: 0; }
+  60% {
+    right: 0px;
+    opacity: 1; }
+  64% {
+    right: 0px;
+    opacity: 1; }
+  76% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  80% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  81% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  100% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; } }
+@keyframes cyclefour {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  56% {
+    right: -325px;
+    opacity: 0; }
+  60% {
+    right: 0px;
+    opacity: 1; }
+  64% {
+    right: 0px;
+    opacity: 1; }
+  76% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  80% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; }
+  81% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; }
+  100% {
+    right: -325px;
+    opacity: 0;
+    z-index: -1; } }
+@-webkit-keyframes cyclefive {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  76% {
+    right: -325px;
+    opacity: 0; }
+  80% {
+    right: 0px;
+    opacity: 1; }
+  84% {
+    right: 0px;
+    opacity: 1; }
+  96% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  100% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; } }
+@keyframes cyclefive {
+  0% {
+    right: -325px;
+    opacity: 0; }
+  76% {
+    right: -325px;
+    opacity: 0; }
+  80% {
+    right: 0px;
+    opacity: 1; }
+  84% {
+    right: 0px;
+    opacity: 1; }
+  96% {
+    right: 0px;
+    opacity: 1;
+    z-index: 0; }
+  100% {
+    right: 325px;
+    opacity: 0;
+    z-index: 0; } }
 body {
   background-color: #000;
   overflow-x: hidden;
@@ -42,144 +334,188 @@ a:hover, a:active {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0 0 30px; }
+  margin: 0 0 25px; }
 
 .sub-title {
-  width: 280px;
+  max-width: 250px;
   font-size: 30px;
   color: #fff;
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
-  text-shadow: 0px 0px 6px rgba(31, 48, 129, 0), 0px 1px 6px rgba(31, 48, 129, 0.2), 0px 2px 6px rgba(31, 48, 129, 0.3), 0px 3px 6px rgba(31, 48, 129, 0.5), 0px 4px 6px rgba(31, 48, 129, 0.7), 0px 5px 6px rgba(31, 48, 129, 0.8), 0px 6px 6px rgba(31, 48, 129, 0.9), 0 0 6px #1f3081;
-  overflow: hidden; }
+  overflow: hidden;
+  padding: 20px 10px;
+  border: none;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: pre;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.3), 0 0 8px rgba(31, 48, 129, 0.6), 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px #1f3081, 0 0 30px #1f3081, 0 0 50px #1f3081, 0 0 60px #1f3081; }
 
 .slider {
   height: 100px; }
 
-.play {
-  height: 120px; }
-  .play .button {
-    display: block;
-    padding: 10px;
-    position: relative;
-    height: 35px;
-    width: 210px;
-    margin: 0 auto;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 28px;
-    text-transform: uppercase;
-    text-align: center;
-    border-radius: 5px;
-    -webkit-transform: matrix3d(0.7574, -0.00008, 0, 0.00008, -0.18456, 0.78294, 0, -0.00227, 0, 0, 1, 0, 19.24415, -1, 0, 1);
-            transform: matrix3d(0.7574, -0.00008, 0, 0.00008, -0.18456, 0.78294, 0, -0.00227, 0, 0, 1, 0, 19.24415, -1, 0, 1);
-    -webkit-transform-origin: 30px 15px 0;
-        -ms-transform-origin: 30px 15px 0;
-            transform-origin: 30px 15px 0;
-    line-height: 38px;
-    white-space: nowrap; }
-    .play .button::before, .play .button::after {
-      content: "";
-      position: absolute;
-      border-radius: 3px; }
-    .play .button::after {
-      left: 0px;
-      width: 228px;
-      bottom: -1px; }
-  .play .play-btn {
-    color: #303234;
-    border-bottom: 8px solid #836224;
-    text-shadow: 0px 1px 0px #f9c87a;
-    background: #f5a322;
-    background-image: -webkit-linear-gradient(90deg, #f5a322 0%, gold 100%);
-    box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4); }
-    .play .play-btn:hover {
-      background: gold;
-      background-image: -webkit-linear-gradient(90deg, gold 0%, gold 100%); }
-    .play .play-btn::before, .play .play-btn::after {
-      border: 1px solid #f9c87a;
-      border-bottom: 1px solid #836224; }
+.play .button {
+  display: block;
+  padding: 10px;
+  position: relative;
+  height: 35px;
+  width: 250px;
+  margin: 0 auto;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 33px;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 5px;
+  -webkit-transform: matrix3d(0.7574, -0.00008, 0, 0.00008, -0.18456, 0.78294, 0, -0.00227, 0, 0, 1, 0, 19.24415, -1, 0, 1);
+          transform: matrix3d(0.7574, -0.00008, 0, 0.00008, -0.18456, 0.78294, 0, -0.00227, 0, 0, 1, 0, 19.24415, -1, 0, 1);
+  -webkit-transform-origin: 43px 15px 0;
+      -ms-transform-origin: 43px 15px 0;
+          transform-origin: 43px 15px 0;
+  line-height: 38px;
+  white-space: nowrap;
+  -webkit-animation: fly 3.5s infinite;
+          animation: fly 3.5s infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear; }
+  .play .button:hover {
+    -webkit-animation: none;
+            animation: none; }
+  .play .button::before, .play .button::after {
+    content: "";
+    position: absolute; }
+  .play .button::before {
+    left: 0px;
+    width: 267px;
+    bottom: -1px;
+    border-radius: 3px; }
+  .play .button::after {
+    background-image: url(../img/btn-shadow.png);
+    background-size: cover;
+    width: 270px;
+    height: 50px;
+    -webkit-animation: text 3.5s infinite;
+            animation: text 3.5s infinite;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    bottom: -60px;
+    left: 0; }
+.play .play-btn {
+  color: #303234;
+  border-bottom: 8px solid #836224;
+  text-shadow: 0px 1px 0px #f9c87a;
+  background: #f5a322;
+  background-image: -webkit-linear-gradient(90deg, #f5a322 0%, gold 100%);
+  box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4); }
+  .play .play-btn:hover {
+    background: gold;
+    background-image: -webkit-linear-gradient(90deg, gold 0%, gold 100%); }
+  .play .play-btn::before {
+    border: 1px solid #f9c87a;
+    border-bottom: 1px solid #836224; }
 
-@-webkit-keyframes logo-pulse {
-  0% {
-    background-position: 0 0px; }
-  100% {
-    background-position: 0 -82px; } }
-
-@keyframes logo-pulse {
-  0% {
-    background-position: 0 0px; }
-  100% {
-    background-position: 0 -82px; } }
 .avt {
   width: 35%;
   background-size: cover;
   position: relative; }
 
 .column {
-  height: 435px;
+  height: 370px;
   margin-top: 50px;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat; }
   .column-left {
     background-image: url(../img/avtomaty-left.png);
-    background-position: right; }
+    background-position: right;
+    padding-top: 35px;
+    box-sizing: content-box; }
     .column-left::before {
       content: "";
       position: absolute;
       background-image: url(../img/big_rob.gif);
       width: 132px;
       height: 80px;
-      top: 163px;
-      right: 158px;
+      top: 149px;
+      right: 157px;
       background-size: cover; }
     .column-left::after {
       content: "";
       position: absolute;
       background-image: url(../img/pearl_lag.gif);
-      width: 118px;
-      height: 75px;
-      top: 163px;
-      right: 42px;
+      width: 120px;
+      height: 70px;
+      top: 147px;
+      right: 37px;
       background-size: cover; }
   .column-right {
     background-image: url(../img/avtomaty-right.png);
-    background-position: left; }
+    background-position: left;
+    padding-top: 35px;
+    box-sizing: content-box; }
     .column-right::before {
       content: "";
       position: absolute;
       background-image: url(../img/hot_targ.gif);
-      width: 143px;
+      width: 133px;
       height: 80px;
-      top: 168px;
-      background-size: cover;
-      left: 23px; }
+      top: 156px;
+      left: 22px;
+      background-size: cover; }
     .column-right::after {
       content: "";
       position: absolute;
       background-image: url(../img/aztecs.gif);
-      width: 128px;
-      height: 78px;
-      top: 175px;
-      background-size: cover;
-      left: 156px; }
+      width: 136px;
+      height: 80px;
+      top: 156px;
+      left: 148px;
+      background-size: cover; }
   .column-center {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-justify-content: space-around;
-        -ms-flex-pack: distribute;
-            justify-content: space-around;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
     padding-bottom: 50px;
     box-sizing: border-box; }
+
+#content-slider {
+  width: 100%;
+  height: 100px;
+  margin: 10px auto 35px; }
+  #content-slider .slider {
+    background: transparent;
+    height: 100px;
+    width: 100%;
+    overflow: visible;
+    position: relative; }
+    #content-slider .slider h3 {
+      color: #fd2550;
+      font-weight: bold;
+      font-size: 24px;
+      text-shadow: 1.414px 1.414px 0px rgba(116, 23, 38, 0.75);
+      margin: 12px 0; }
+    #content-slider .slider .mask {
+      overflow: hidden;
+      height: 100px;
+      position: relative; }
+      #content-slider .slider .mask section {
+        width: 100%;
+        height: 100px;
+        text-align: center;
+        text-transform: uppercase;
+        position: absolute;
+        font-size: 18px;
+        color: #fff;
+        line-height: 25px; }
+        #content-slider .slider .mask section.firstanimation {
+          -webkit-animation: cycle 20s linear infinite;
+                  animation: cycle 20s linear infinite; }
+        #content-slider .slider .mask section.secondanimation {
+          -webkit-animation: cycletwo 20s linear infinite;
+                  animation: cycletwo 20s linear infinite; }
+        #content-slider .slider .mask section.thirdanimation {
+          -webkit-animation: cyclethree 20s linear infinite;
+                  animation: cyclethree 20s linear infinite; }
+        #content-slider .slider .mask section.fourthanimation {
+          -webkit-animation: cyclefour 20s linear infinite;
+                  animation: cyclefour 20s linear infinite; }
+        #content-slider .slider .mask section.fifthanimation {
+          -webkit-animation: cyclefive 20s linear infinite;
+                  animation: cyclefive 20s linear infinite; }
