--- a/css/colors.sass
+++ b/css/colors.sass
@@ -1,6 +1,10 @@
 $black : #000
 $white : #fff
 
+$darkGray : rgb(50,57,64)
+$gray : #8e98a2
+$lightGray : rgb(159,169,184)
+
 $blue : rgb(31,48,129)
 
 $orange : rgb(245,163,34)
