--- a/css/style.sass
+++ b/css/style.sass
@@ -12,29 +12,10 @@ a:hover, a:active
 .flex
   display: flex
 
-.container
-  max-width: 960px
-  margin: 0 auto
-.main-header
-  background-image: url(../img/bck.png)
-  width: 100%
-  height: 530px
-  background-position: center
-  background-size: cover
-  justify-content: space-between
-.logo
-  width: 250px
-  height: 35px
-  margin: 0 auto
-  background-image: url(../img/logo.png)
-  background-repeat: no-repeat
-  background-size: 100%
-  animation: logo-pulse 2s steps(2) infinite
-.title
-  text-indent: 100%
-  white-space: nowrap
-  overflow: hidden
-  margin: 0 0 25px
+.clearfix
+  content: ''
+  display: table
+  clear: both
 
 .sub-title
   max-width: 250px
@@ -52,175 +33,231 @@ a:hover, a:active
   white-space: pre
   text-shadow: 0 0 5px rgba($white,0.3) , 0 0 8px rgba($blue,0.6) , 0 0 10px rgba($white,0.8) , 0 0 20px $blue , 0 0 30px $blue , 0 0 50px $blue , 0 0 60px $blue
 
-.slider
-  height: 100px
-
-
-.play
-  // height: 120px
-  .button
-    display: block
-    padding: 10px
-    position: relative
-    height: 35px
-    width: 250px
-    margin: 0 auto
-    text-decoration: none
-    font-weight: bold
-    font-size: 33px
-    text-transform: uppercase
-    text-align: center
-    border-radius: 5px
-    transform: matrix3d(0.757401, -0.000077, 0, 0.000077, -0.184557, 0.782938, 0, -0.002271, 0, 0, 1, 0, 19.244145, -1, 0, 1)
-    transform-origin: 43px 15px 0
-    line-height: 38px
-    white-space: nowrap
-    animation: fly 3.5s infinite
-    animation-timing-function: linear
-    &:hover
-      animation: none
-    &::before,
-    &::after
-      content: ''
-      position: absolute
-    &::before
-      left: 0px
-      width: 267px
-      bottom: -1px
-      border-radius: 3px
-    // &::before
-    //   height: 23px
-    //   border-top: 0
-    //   border-radius: 0 0 3px 3px
-    &::after
-      background-image: url(../img/btn-shadow.png)
-      background-size: cover
-      width: 270px
-      height: 50px
-      // transinion: ease 3s transform
-      animation: text 3.5s infinite
-      animation-timing-function: linear
-      bottom: -60px
-      left: 0
-
-  .play-btn
-    color: #303234
-    border-bottom: 8px solid $brown
-    text-shadow: 0px 1px 0px $lightBrown
-    background: $orange
-    background-image: -moz-linear-gradient( 90deg, $orange 0%, $yellow 100%)
-    background-image: -webkit-linear-gradient( 90deg, $orange 0%, $yellow 100%)
-    background-image: -ms-linear-gradient( 90deg, $orange 0%, $yellow 100%)
-    box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4)
-    &:hover
-      background: $yellow
-      background-image: -moz-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
-      background-image: -webkit-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
-    &::before
-      border: 1px solid $lightBrown
-      border-bottom: 1px solid $brown
-.avt
-  width: 35%
-  // height: 435px
-  background-size: cover
-  position: relative
-.column
-  height: 370px
-  margin-top: 50px
-  background-size: cover
-  background-repeat: no-repeat
-  &-left
-    background-image: url(../img/avtomaty-left.png)
-    background-position: right
-    padding-top: 35px
-    box-sizing: content-box
-    &::before
-      content: ''
-      position: absolute
-      background-image: url(../img/big_rob.gif)
-      width: 132px
-      height: 80px
-      top: 149px
-      right: 157px
-      background-size: cover
-    &::after
-      content: ''
-      position: absolute
-      background-image: url(../img/pearl_lag.gif)
-      width: 120px
-      height: 70px
-      top: 147px
-      right: 37px
-      background-size: cover
-  &-right
-    background-image: url(../img/avtomaty-right.png)
-    background-position: left
-    padding-top: 35px
-    box-sizing: content-box
-    &::before
-      content: ''
-      position: absolute
-      background-image: url(../img/hot_targ.gif)
-      width: 133px
-      height: 80px
-      top: 156px
-      left: 22px
-      background-size: cover
-    &::after
-      content: ''
-      position: absolute
-      background-image: url(../img/aztecs.gif)
-      width: 136px
-      height: 80px
-      top: 156px
-      left: 148px
-      background-size: cover
-  &-center
-    // max-width: 30%
-    // display: flex
-    // flex-direction: column
-    // justify-content: space-around
-    // align-items: center
-    padding-bottom: 50px
-    box-sizing: border-box
-
-#content-slider
+.container
+  max-width: 960px
+  margin: 0 auto
+.main-header
+  background-image: url(../img/bck.png)
   width: 100%
-  height: 100px
-  margin: 10px auto 35px
-  .slider
-    background: transparent
-    height: 100px
-    width: 100%
-    overflow: visible
+  height: 530px
+  background-position: center
+  background-size: cover
+  justify-content: space-between
+  .logo
+    width: 250px
+    height: 35px
+    margin: 0 auto
+    background-image: url(../img/logo.png)
+    background-repeat: no-repeat
+    background-size: 100%
+    animation: logo-pulse 2s steps(2) infinite
+  .title
+    text-indent: 100%
+    white-space: nowrap
+    overflow: hidden
+    margin: 0 0 25px
+  .avt
+    width: 35%
+    // height: 435px
+    background-size: cover
     position: relative
-    h3
-      color: $pink
-      font-weight: bold
-      font-size: 24px
-      text-shadow: 1.414px 1.414px 0px rgba($vine, 0.75)
-      margin: 12px 0
-    .mask
-      overflow: hidden
-      height: 100px
-      position: relative
-      section
-        width: 100%
-        height: 100px
-        text-align: center
-        text-transform: uppercase
+  .column
+    height: 370px
+    margin-top: 50px
+    background-size: cover
+    background-repeat: no-repeat
+    &-left
+      background-image: url(../img/avtomaty-left.png)
+      background-position: right
+      padding-top: 35px
+      box-sizing: content-box
+      &::before
+        content: ''
         position: absolute
-        p
-        font-size: 18px
-        color: $white
-        line-height: 25px
-        &.firstanimation
-          animation: cycle 20s linear infinite
-        &.secondanimation
-          animation: cycletwo 20s linear infinite
-        &.thirdanimation
-          animation: cyclethree 20s linear infinite
-        &.fourthanimation
-          animation: cyclefour 20s linear infinite
-        &.fifthanimation
-          animation: cyclefive 20s linear infinite
+        background-image: url(../img/big_rob.gif)
+        width: 132px
+        height: 80px
+        top: 149px
+        right: 157px
+        background-size: cover
+      &::after
+        content: ''
+        position: absolute
+        background-image: url(../img/pearl_lag.gif)
+        width: 120px
+        height: 70px
+        top: 147px
+        right: 37px
+        background-size: cover
+    &-right
+      background-image: url(../img/avtomaty-right.png)
+      background-position: left
+      padding-top: 35px
+      box-sizing: content-box
+      &::before
+        content: ''
+        position: absolute
+        background-image: url(../img/hot_targ.gif)
+        width: 133px
+        height: 80px
+        top: 156px
+        left: 22px
+        background-size: cover
+      &::after
+        content: ''
+        position: absolute
+        background-image: url(../img/aztecs.gif)
+        width: 136px
+        height: 80px
+        top: 156px
+        left: 148px
+        background-size: cover
+    &-center
+      // max-width: 30%
+      // display: flex
+      // flex-direction: column
+      // justify-content: space-around
+      // align-items: center
+      padding-bottom: 50px
+      box-sizing: border-box
+  .play
+    // height: 120px
+    .button
+      display: block
+      padding: 10px
+      position: relative
+      height: 35px
+      width: 250px
+      margin: 0 auto
+      text-decoration: none
+      font-weight: bold
+      font-size: 33px
+      text-transform: uppercase
+      text-align: center
+      border-radius: 5px
+      transform: matrix3d(0.757401, -0.000077, 0, 0.000077, -0.184557, 0.782938, 0, -0.002271, 0, 0, 1, 0, 19.244145, -1, 0, 1)
+      transform-origin: 43px 15px 0
+      line-height: 38px
+      white-space: nowrap
+      animation: fly 3.5s infinite
+      animation-timing-function: linear
+      &:hover
+        animation: none
+        &::after
+          animation: none
+      &::before,
+      &::after
+        content: ''
+        position: absolute
+      &::before
+        left: 0px
+        width: 267px
+        bottom: -1px
+        border-radius: 3px
+      // &::before
+      //   height: 23px
+      //   border-top: 0
+      //   border-radius: 0 0 3px 3px
+      &::after
+        background-image: url(../img/btn-shadow.png)
+        background-size: cover
+        width: 270px
+        height: 50px
+        // transinion: ease 3s transform
+        animation: text 3.5s infinite
+        animation-timing-function: linear
+        bottom: -60px
+        left: 0
+    .play-btn
+      color: #303234
+      border-bottom: 8px solid $brown
+      text-shadow: 0px 1px 0px $lightBrown
+      background: $orange
+      background-image: -moz-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+      background-image: -webkit-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+      background-image: -ms-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+      box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4)
+      &:hover
+        background: $yellow
+        background-image: -moz-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
+        background-image: -webkit-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
+      &::before
+        border: 1px solid $lightBrown
+        border-bottom: 1px solid $brown
+  #content-slider
+    width: 100%
+    height: 100px
+    margin: 10px auto 35px
+    .slider
+      background: transparent
+      height: 100px
+      width: 100%
+      overflow: visible
+      position: relative
+      h3
+        color: $pink
+        font-weight: bold
+        font-size: 24px
+        text-shadow: 1.414px 1.414px 0px rgba($vine, 0.75)
+        margin: 12px 0
+      .mask
+        overflow: hidden
+        height: 100px
+        position: relative
+        section
+          width: 100%
+          height: 100px
+          text-align: center
+          text-transform: uppercase
+          position: absolute
+          p
+          font-size: 18px
+          color: $white
+          line-height: 25px
+          &.firstanimation
+            animation: cycle 20s linear infinite
+          &.secondanimation
+            animation: cycletwo 20s linear infinite
+          &.thirdanimation
+            animation: cyclethree 20s linear infinite
+          &.fourthanimation
+            animation: cyclefour 20s linear infinite
+          &.fifthanimation
+            animation: cyclefive 20s linear infinite
+
+
+.games
+  padding: 0 10vw
+  position: relative
+  top: -90px
+  justify-content: space-around
+  flex-wrap: wrap
+  .game
+    min-width: 120px
+    flex: 1 1 120px
+    border: 1px solid $white
+    background-image: -moz-linear-gradient( 90deg, $darkGray 0%, $lightGray 40%, $lightGray 60%, $darkGray 100%)
+    background-image: -webkit-linear-gradient( 90deg, $darkGray 0%, $lightGray 40%, $lightGray 60%, $darkGray 100%)
+    background-image: -ms-linear-gradient( 90deg, $darkGray 0%, $lightGray 40%, $lightGray 60%,$darkGray 100%)
+    padding: 10px 10px 0px
+    margin: 15px 10px
+    text-align: center
+    a
+      display: block
+      text-decoration: none
+      overflow: hidden
+    .game-preview
+      width: 100%
+      border: 1px solid $gray
+      transform: scale3d(1, 1, 1)
+      box-shadow: 2px 3px 5px -1px rgba($black,0.7)
+      box-sizing: border-box
+      transition: all 0.5s linear
+      &:hover
+        transform: scale3d(1.2, 1.2, 1)
+
+    h6
+      font-size: 18px
+      color: $white
+      text-shadow: 2px 1px 2px rgba($black,0.7)
+      padding: 10px 0
