games block fixed

--- a/css/colors.sass
+++ b/css/colors.sass
@@ -5,7 +5,9 @@ $darkGray : rgb(50,57,64)
 $gray : #8e98a2
 $lightGray : rgb(159,169,184)
 
-$blue : rgb(31,48,129)
+$navy : rgb(31,48,129)
+$blue : rgb(77,57,188)
+$aqua : rgb(0,138,237)
 
 $orange : rgb(245,163,34)
 
