--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ a:hover, a:active {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
   .games .game {
-    min-width: 120px;
+    max-width: 130px;
     -webkit-box-flex: 1;
     -webkit-flex: 1 1 120px;
         -ms-flex: 1 1 120px;
@@ -540,24 +540,64 @@ a:hover, a:active {
     padding: 10px 10px 0px;
     margin: 15px 10px;
     text-align: center; }
-    .games .game a {
-      display: block;
-      text-decoration: none;
-      overflow: hidden; }
     .games .game .game-preview {
-      width: 100%;
+      display: block;
+      height: 65px;
+      text-decoration: none;
+      overflow: hidden;
       border: 1px solid #8e98a2;
-      -webkit-transform: scale3d(1, 1, 1);
-              transform: scale3d(1, 1, 1);
       box-shadow: 2px 3px 5px -1px rgba(0, 0, 0, 0.7);
       box-sizing: border-box;
-      -webkit-transition: all 0.5s linear;
-              transition: all 0.5s linear; }
-      .games .game .game-preview:hover {
+      position: relative; }
+      .games .game .game-preview img {
+        max-width: 100%;
+        -webkit-transform: scale3d(1, 1, 1);
+                transform: scale3d(1, 1, 1);
+        -webkit-transition: all 0.3s linear;
+                transition: all 0.3s linear; }
+      .games .game .game-preview:hover img {
         -webkit-transform: scale3d(1.2, 1.2, 1);
                 transform: scale3d(1.2, 1.2, 1); }
-    .games .game h6 {
+      .games .game .game-preview:hover .game-play {
+        visibility: visible;
+        -webkit-transition-delay: 0s;
+                transition-delay: 0s; }
+        .games .game .game-preview:hover .game-play .game-play-btn {
+          top: 13px; }
+      .games .game .game-preview .game-play {
+        background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, rgba(0, 0, 0, 0.9)));
+        background: -webkit-radial-gradient(center, ellipse cover, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.9) 100%);
+        background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.95) 100%);
+        background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.95) 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$black', endColorstr='$black',GradientType=1 );
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        visibility: hidden;
+        -webkit-transition: visibility 0s linear 0.3s;
+                transition: visibility 0s linear 0.3s; }
+        .games .game .game-preview .game-play .game-play-btn {
+          width: auto;
+          height: 25px;
+          border-radius: 5px;
+          background-image: -webkit-linear-gradient(90deg, #4d39bc 0%, #008aed 100%);
+          box-shadow: 0px 2px 1px 0px rgba(50, 57, 64, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4);
+          padding: 5px 10px;
+          font-size: 24px;
+          color: #fff;
+          font-weight: bold;
+          text-align: center;
+          text-shadow: 0.5px 0.866px 1px rgba(0, 0, 0, 0.5);
+          position: absolute;
+          left: 22px;
+          top: -35px;
+          -webkit-transition: all 0.3s linear;
+                  transition: all 0.3s linear; }
+    .games .game .game-title {
       font-size: 18px;
       color: #fff;
       text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.7);
-      padding: 10px 0; }
+      padding: 10px 0;
+      cursor: default; }
