comments block fixed

--- a/css/colors.sass
+++ b/css/colors.sass
@@ -9,6 +9,8 @@ $navy : rgb(31,48,129)
 $blue : rgb(77,57,188)
 $aqua : rgb(0,138,237)
 
+$lightBlue : #a4b0ff
+
 $orange : rgb(245,163,34)
 
 $yellow : rgb(255,215,0)
