--- a/css/style.sass
+++ b/css/style.sass
@@ -1,6 +1,6 @@
 @import "colors"
 @import "animation"
-@import "https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=cyrillic"
+@import "https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700,700i&subset=cyrillic"
 
 body
   background-color: $black
@@ -18,7 +18,8 @@ a:hover, a:active
   clear: both
 
 .sub-title
-  max-width: 250px
+  max-width: 310px
+  margin: 0 auto
   font-size: 30px
   color: $white
   font-weight: bold
@@ -301,3 +302,41 @@ a:hover, a:active
       text-shadow: 2px 1px 2px rgba($black,0.7)
       padding: 10px 0
       cursor: default
+
+.comments
+  position: relative
+  top: -30px
+  padding: 0 17vw
+  &::before,
+  &::after
+    content: ''
+    width: 960px
+    height: 15px
+    background-image: url(../img/br.png)
+    background-repeat: no-repeat
+    background-size: contain
+    background-position: center
+    display: inline-block
+    position: absolute
+    left: 0
+    max-width: 100%
+  &::before
+    top: -30px
+  &::after
+    bottom: -40px
+  .comment
+    font-size: 16px
+    font-weight: bold
+    font-style: italic
+    padding: 20px 0
+    &-content
+      color: $white
+      padding: 3px 0
+    &-name
+      color: $lightBlue
+      text-align: right
+      padding: 3px 0
+
+
+.benefits
+  margin-top: 30px
