benefits block added, btn added

--- a/css/animation.sass
+++ b/css/animation.sass
@@ -12,6 +12,13 @@
   100%
     background-position: 0 -82px
 
+
+@keyframes rotate
+  from
+    transform:  rotate(0)
+  to
+    transform: rotate(360deg)
+
 @keyframes cycle
   0%
     right: 0px
