--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,20 @@
     background-position: 0 0px; }
   100% {
     background-position: 0 -82px; } }
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+@keyframes rotate {
+  from {
+    -webkit-transform: rotate(0);
+            transform: rotate(0); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
 @-webkit-keyframes cycle {
   0% {
     right: 0px; }
@@ -327,6 +341,36 @@ a:hover, a:active {
   white-space: pre;
   text-shadow: 0 0 5px rgba(255, 255, 255, 0.3), 0 0 8px rgba(31, 48, 129, 0.6), 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px #1f3081, 0 0 30px #1f3081, 0 0 50px #1f3081, 0 0 60px #1f3081; }
 
+.play-btn {
+  color: #303234;
+  border-bottom: 8px solid #836224;
+  text-shadow: 0px 1px 0px #f9c87a;
+  background: #f5a322;
+  background-image: -webkit-linear-gradient(90deg, #f5a322 0%, gold 100%);
+  box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4); }
+  .play-btn:hover {
+    background: gold;
+    background-image: -webkit-linear-gradient(90deg, gold 0%, gold 100%); }
+  .play-btn::before {
+    border: 1px solid #f9c87a;
+    border-bottom: 1px solid #f5a322; }
+
+.button {
+  display: block;
+  padding: 10px;
+  position: relative;
+  height: 35px;
+  width: 250px;
+  margin: 0 auto;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 33px;
+  text-transform: uppercase;
+  text-align: center;
+  border-radius: 5px;
+  line-height: 38px;
+  white-space: nowrap; }
+
 .container {
   max-width: 960px;
   margin: 0 auto; }
@@ -414,25 +458,11 @@ a:hover, a:active {
       padding-bottom: 50px;
       box-sizing: border-box; }
   .main-header .play .button {
-    display: block;
-    padding: 10px;
-    position: relative;
-    height: 35px;
-    width: 250px;
-    margin: 0 auto;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 33px;
-    text-transform: uppercase;
-    text-align: center;
-    border-radius: 5px;
     -webkit-transform: matrix3d(0.7574, -0.00008, 0, 0.00008, -0.18456, 0.78294, 0, -0.00227, 0, 0, 1, 0, 19.24415, -1, 0, 1);
             transform: matrix3d(0.7574, -0.00008, 0, 0.00008, -0.18456, 0.78294, 0, -0.00227, 0, 0, 1, 0, 19.24415, -1, 0, 1);
     -webkit-transform-origin: 43px 15px 0;
         -ms-transform-origin: 43px 15px 0;
             transform-origin: 43px 15px 0;
-    line-height: 38px;
-    white-space: nowrap;
     -webkit-animation: fly 3.5s infinite;
             animation: fly 3.5s infinite;
     -webkit-animation-timing-function: linear;
@@ -462,19 +492,6 @@ a:hover, a:active {
               animation-timing-function: linear;
       bottom: -60px;
       left: 0; }
-  .main-header .play .play-btn {
-    color: #303234;
-    border-bottom: 8px solid #836224;
-    text-shadow: 0px 1px 0px #f9c87a;
-    background: #f5a322;
-    background-image: -webkit-linear-gradient(90deg, #f5a322 0%, gold 100%);
-    box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4); }
-    .main-header .play .play-btn:hover {
-      background: gold;
-      background-image: -webkit-linear-gradient(90deg, gold 0%, gold 100%); }
-    .main-header .play .play-btn::before {
-      border: 1px solid #f9c87a;
-      border-bottom: 1px solid #836224; }
   .main-header #content-slider {
     width: 100%;
     height: 100px;
@@ -630,6 +647,7 @@ a:hover, a:active {
     padding: 20px 0; }
     .comments .comment-content {
       color: #fff;
+      line-height: 20px;
       padding: 3px 0; }
     .comments .comment-name {
       color: #a4b0ff;
@@ -637,4 +655,62 @@ a:hover, a:active {
       padding: 3px 0; }
 
 .benefits {
-  margin-top: 30px; }
+  margin-top: 30px;
+  padding: 0 10vw; }
+  .benefits-content {
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap; }
+  .benefits .benefit {
+    max-width: 100px;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 110px;
+        -ms-flex: 1 1 110px;
+            flex: 1 1 110px;
+    margin: 10px; }
+    .benefits .benefit-title {
+      width: 90px;
+      margin: 5px auto;
+      font-size: 12px;
+      color: #a4b0ff;
+      line-height: 1.2;
+      text-align: center; }
+    .benefits .benefit img {
+      width: 100px;
+      -webkit-transition: all 0.5s ease-in-out;
+              transition: all 0.5s ease-in-out; }
+      .benefits .benefit img:hover {
+        -webkit-transform: scaleX(-1);
+            -ms-transform: scaleX(-1);
+                transform: scaleX(-1); }
+
+.bottom-btn {
+  margin: 30px 0; }
+  .bottom-btn .button {
+    width: 210px;
+    font-size: 28px;
+    border: 1px solid #f9c87a;
+    box-shadow: 0px 8px 1px -4px rgba(131, 98, 36, 0.75);
+    position: relative;
+    -webkit-transition: all 0.5s linear;
+            transition: all 0.5s linear; }
+    .bottom-btn .button::after {
+      content: "";
+      position: absolute;
+      background-image: url(../img/btn-shadow-white.png);
+      background-size: 100% 100%;
+      width: 230px;
+      height: 50px;
+      bottom: -55px;
+      left: 0;
+      -webkit-transition: all 0.5s linear;
+              transition: all 0.5s linear; }
+    .bottom-btn .button:hover {
+      margin-top: -3px; }
+      .bottom-btn .button:hover::after {
+        -webkit-filter: brightness(150%);
+                filter: brightness(150%);
+        bottom: -58px; }
