--- a/css/style.sass
+++ b/css/style.sass
@@ -34,6 +34,39 @@ a:hover, a:active
   white-space: pre
   text-shadow: 0 0 5px rgba($white,0.3), 0 0 8px rgba($navy,0.6), 0 0 10px rgba($white,0.8), 0 0 20px $navy, 0 0 30px $navy, 0 0 50px $navy, 0 0 60px $navy
 
+.play-btn
+  color: #303234
+  border-bottom: 8px solid $brown
+  text-shadow: 0px 1px 0px $lightBrown
+  background: $orange
+  background-image: -moz-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+  background-image: -webkit-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+  background-image: -ms-linear-gradient( 90deg, $orange 0%, $yellow 100%)
+  box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4)
+  &:hover
+    background: $yellow
+    background-image: -moz-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
+    background-image: -webkit-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
+  &::before
+    border: 1px solid $lightBrown
+    border-bottom: 1px solid $orange
+
+.button
+  display: block
+  padding: 10px
+  position: relative
+  height: 35px
+  width: 250px
+  margin: 0 auto
+  text-decoration: none
+  font-weight: bold
+  font-size: 33px
+  text-transform: uppercase
+  text-align: center
+  border-radius: 5px
+  line-height: 38px
+  white-space: nowrap
+
 .container
   max-width: 960px
   margin: 0 auto
@@ -59,7 +92,6 @@ a:hover, a:active
     margin: 0 0 25px
   .avt
     width: 35%
-    // height: 435px
     background-size: cover
     position: relative
   .column
@@ -114,32 +146,12 @@ a:hover, a:active
         left: 148px
         background-size: cover
     &-center
-      // max-width: 30%
-      // display: flex
-      // flex-direction: column
-      // justify-content: space-around
-      // align-items: center
       padding-bottom: 50px
       box-sizing: border-box
   .play
-    // height: 120px
     .button
-      display: block
-      padding: 10px
-      position: relative
-      height: 35px
-      width: 250px
-      margin: 0 auto
-      text-decoration: none
-      font-weight: bold
-      font-size: 33px
-      text-transform: uppercase
-      text-align: center
-      border-radius: 5px
       transform: matrix3d(0.757401, -0.000077, 0, 0.000077, -0.184557, 0.782938, 0, -0.002271, 0, 0, 1, 0, 19.244145, -1, 0, 1)
       transform-origin: 43px 15px 0
-      line-height: 38px
-      white-space: nowrap
       animation: fly 3.5s infinite
       animation-timing-function: linear
       &:hover
@@ -155,36 +167,15 @@ a:hover, a:active
         width: 267px
         bottom: -1px
         border-radius: 3px
-      // &::before
-      //   height: 23px
-      //   border-top: 0
-      //   border-radius: 0 0 3px 3px
       &::after
         background-image: url(../img/btn-shadow.png)
         background-size: cover
         width: 270px
         height: 50px
-        // transinion: ease 3s transform
         animation: text 3.5s infinite
         animation-timing-function: linear
         bottom: -60px
         left: 0
-    .play-btn
-      color: #303234
-      border-bottom: 8px solid $brown
-      text-shadow: 0px 1px 0px $lightBrown
-      background: $orange
-      background-image: -moz-linear-gradient( 90deg, $orange 0%, $yellow 100%)
-      background-image: -webkit-linear-gradient( 90deg, $orange 0%, $yellow 100%)
-      background-image: -ms-linear-gradient( 90deg, $orange 0%, $yellow 100%)
-      box-shadow: 0px 7px 0px 0px rgba(131, 98, 36, 0.004),inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4)
-      &:hover
-        background: $yellow
-        background-image: -moz-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
-        background-image: -webkit-linear-gradient( 90deg, $yellow  0%, $yellow 100%)
-      &::before
-        border: 1px solid $lightBrown
-        border-bottom: 1px solid $brown
   #content-slider
     width: 100%
     height: 100px
@@ -331,6 +322,7 @@ a:hover, a:active
     padding: 20px 0
     &-content
       color: $white
+      line-height: 20px
       padding: 3px 0
     &-name
       color: $lightBlue
@@ -340,3 +332,48 @@ a:hover, a:active
 
 .benefits
   margin-top: 30px
+  padding: 0 10vw
+  &-content
+    justify-content: space-around
+    flex-wrap: wrap
+  .benefit
+    max-width: 100px
+    flex: 1 1 110px
+    margin: 10px
+    &-title
+      width: 90px
+      margin: 5px auto
+      font-size: 12px
+      color: $lightBlue
+      line-height: 1.2
+      text-align: center
+    img
+      width: 100px
+      transition: all 0.5s ease-in-out
+      &:hover
+        transform: scaleX(-1)
+
+.bottom-btn
+  margin: 30px 0
+  .button
+    width: 210px
+    font-size: 28px
+    border: 1px solid $lightBrown
+    box-shadow: 0px 8px 1px -4px rgba($brown, 0.75)
+    position: relative
+    transition: all 0.5s linear
+    &::after
+      content: ''
+      position: absolute
+      background-image: url(../img/btn-shadow-white.png)
+      background-size: 100% 100%
+      width: 230px
+      height: 50px
+      bottom: -55px
+      left: 0
+      transition: all 0.5s linear
+    &:hover
+      margin-top: -3px
+      &::after
+        filter: brightness(150%)
+        bottom: -58px
