--- a/css/style.css
+++ b/css/style.css
@@ -715,7 +715,24 @@ a:hover, a:active {
                 filter: brightness(150%);
         bottom: -58px; }
 
-#return-to-top {
+.partners {
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin: 50px; }
+  .partners .partner {
+    width: 50px;
+    max-width: 50px;
+    height: 50px;
+    margin: 3px;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 45px;
+        -ms-flex: 1 1 45px;
+            flex: 1 1 45px; }
+    .partners .partner img {
+      max-width: 100%; }
+
+#to-top {
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -732,7 +749,7 @@ a:hover, a:active {
   display: none;
   -webkit-transition: all 0.3s ease;
           transition: all 0.3s ease; }
-  #return-to-top::before {
+  #to-top::before {
     content: "";
     position: absolute;
     left: 0px;
@@ -741,7 +758,7 @@ a:hover, a:active {
     border-bottom: 20px solid rgba(142, 152, 162, 0.2);
     -webkit-transition: all 0.3s ease;
             transition: all 0.3s ease; }
-  #return-to-top:hover {
+  #to-top:hover {
     background: rgba(142, 152, 162, 0.1); }
-    #return-to-top:hover::before {
+    #to-top:hover::before {
       border-bottom-color: rgba(142, 152, 162, 0.1); }
