--- a/css/style.sass
+++ b/css/style.sass
@@ -378,8 +378,22 @@ a:hover, a:active
         filter: brightness(150%)
         bottom: -58px
 
+.partners
+  flex-wrap: wrap
+  margin: 50px
+  .partner
+    width: 50px
+    max-width: 50px
+    height: 50px
+    margin: 3px
+    flex: 1 1 45px
+    img
+      max-width: 100%
+  
 
-#return-to-top
+
+
+#to-top
   position: fixed
   bottom: 20px
   right: 20px
